--- a/apps/evm-next/src/locales/zh.po
+++ b/apps/evm-next/src/locales/zh.po
@@ -220,7 +220,7 @@ msgstr "跨链到BOB"
 
 #: src/app/[lang]/fusion/components/WelcomeModal/WelcomeModal.tsx:33
 msgid "Bridge your assets to BOB to start harvesting Spice.<0/>TIP: Some assets earn more Spice than others. You can see which by clicking the “View Multipliers” button."
-msgstr ""
+msgstr "将你的资产跨链到BOB以开始收获Spice。<0/>提示：某些资产比其他资产赚取更多Spice。你可以通过点击\"查看倍数\"按钮来查看。"
 
 #: src/app/[lang]/bridge/components/BridgeForm/BridgeAlert.tsx:15
 msgid "Bridging ALEX is disabled because Alex Lab suffered an exploit involving the XLink bridge. For more information, kindly refer to this <0>announcement</0>."
