--- a/apps/evm/src/locales/en.po
+++ b/apps/evm/src/locales/en.po
@@ -394,6 +394,10 @@ msgstr "BTC bridge is currently unavailable. This may be due to: {0}. Please try
 msgid "BTC LST Lending"
 msgstr "BTC LST Lending"
 
+#: src/components/Profile/Profile.tsx:111
+msgid "Buy"
+msgstr "Buy"
+
 #: src/connect-ui/component/ConnectModal/ConnectModal.tsx:181
 msgid "By clicking ‘Connect’ you acknowledge and agree to the"
 msgstr "By clicking ‘Connect’ you acknowledge and agree to the"
@@ -438,6 +442,10 @@ msgstr "Click the <0/> icon next to your favourite apps"
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:194
 msgid "Close"
 msgstr "Close"
+
+#: src/components/Profile/Profile.tsx:86
+msgid "close drawer"
+msgstr "close drawer"
 
 #: src/app/[lang]/(bridge)/components/BannerCarousel/BabylonBanner.tsx:22
 #: src/app/[lang]/fusion/Fusion.tsx:198
@@ -591,6 +599,10 @@ msgstr "DEX Liquidity Provisioning"
 #: src/app/[lang]/(bridge)/stake/components/StakeRewards/StakeRewards.tsx:28
 msgid "Diamond"
 msgstr "Diamond"
+
+#: src/components/Profile/Profile.tsx:77
+msgid "disconnect wallet(s)"
+msgstr "disconnect wallet(s)"
 
 #: src/app/[lang]/nested-providers.tsx:61
 msgid "Disconnected"
@@ -1328,6 +1340,7 @@ msgid "Read the official Fusion Guide on the new BOB Blog and start harvesting S
 msgstr "Read the official Fusion Guide on the new BOB Blog and start harvesting Spice now."
 
 #: src/app/[lang]/(bridge)/bridge/components/BridgeForm/BtcBridgeForm.tsx:136
+#: src/components/Profile/Profile.tsx:125
 msgid "Receive"
 msgstr "Receive"
 
@@ -1659,7 +1672,7 @@ msgstr "Start Harvesting"
 
 #: src/app/[lang]/fusion/components/OpSuperuserModal/OpSuperuserModal.tsx:55
 #: src/app/[lang]/fusion/components/UserInfo/UserInfo.tsx:394
-#: src/app/[lang]/sign-up/SignUp.tsx:127
+#: src/app/[lang]/sign-up/SignUp.tsx:128
 msgid "Start Harvesting Spice"
 msgstr "Start Harvesting Spice"
 
