--- a/apps/evm/src/locales/zh.po
+++ b/apps/evm/src/locales/zh.po
@@ -52,7 +52,7 @@ msgstr "距离投票轮结束还有{0}"
 
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:57
 msgid "{timeToNextDraw} until next draw"
-msgstr ""
+msgstr "{timeToNextDraw} 直到下一次抽獎"
 
 #: src/app/[lang]/fusion/components/UserInfo/MultipliersModal.tsx:230
 msgid "* The multipliers displayed are subject to change based on the payout structure of the respective projects."
@@ -68,7 +68,7 @@ msgstr ""
 
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:63
 msgid "<0>{0} {1, plural, one {Envelope} other {Envelopes}} </0>Remaining"
-msgstr ""
+msgstr "<0>{0} {1, plural, one {紅包} other {紅包}} </0>剩餘"
 
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:63
 #~ msgid "<0>{0} {1, plural, one {Ticket} other {Tickets}} </0>Remaining"
@@ -438,7 +438,7 @@ msgstr "选择任何现有的流动性质押提供商来铸造你的BTC LST。"
 
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:73
 msgid "Claim your red envelope to win Spice and celebrate the Lunar New Year with BOB.<0/>Participate in Fusion voting to receive 3 envelopes daily until January 29th.<1/>Win 100, 500 or 1,000 Spice with every envelope. Then share your winnings on X for a chance to win an extra 50,000 Spice."
-msgstr ""
+msgstr "BOB蛇年大礼包等你来领!一键获得 Spice积分奖励, 与BOB一起喜迎蛇年🐍<0/>參加Fushion投票，每天可獲得3個紅包，活動舉行至1月29日。<1/>每個紅包可分別獲得100、500或1,000香料。只要你在推特上分享你的獲獎喜訊，便有機會贏取額外的50,000香料。"
 
 #: src/app/[lang]/apps/components/HeroBanner/VotingInfoModal.tsx:34
 msgid "Click the <0/> icon next to your favourite apps"
@@ -1027,7 +1027,7 @@ msgstr "登录查看仪表板"
 
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:88
 msgid "Login to play"
-msgstr ""
+msgstr "登錄以參加遊戲"
 
 #: src/components/LoginSection/LoginSection.tsx:14
 msgid "Login with wallet"
@@ -1054,7 +1054,7 @@ msgstr ""
 
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:61
 msgid "Lunar New Year Lottery"
-msgstr ""
+msgstr "農曆新年彩票"
 
 #: src/app/[lang]/(bridge)/stake/components/StakeTable/StakeTable.tsx:109
 msgid "Manage"
@@ -1062,7 +1062,7 @@ msgstr ""
 
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:147
 msgid "Maximize your chances by using all your envelopes before the countdown resets. Don't forget to participate in Weekly Fusion Voting to claim your 3 Lottery envelopes daily."
-msgstr ""
+msgstr "在倒計時重置之前，使用所有紅包以增加你的獲勝機會。別忘了每週參加 Fushion投票，就可以天天領3個彩票紅包。"
 
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:146
 #~ msgid "Maximize your chances by using all your tickets before the countdown resets. Don't forget to participate in Weekly Fusion Voting to claim your 3 Lottery tickets daily."
@@ -1169,7 +1169,7 @@ msgstr ""
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:71
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:162
 msgid "New envelopes drop in {timeToNextDraw}"
-msgstr ""
+msgstr "新紅包即將發放{timeToNextDraw}"
 
 #: src/app/[lang]/fusion/components/Quest/Quest.tsx:72
 #~ msgid "New Quests Coming Soon"
@@ -1277,7 +1277,7 @@ msgstr ""
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:213
 #: src/app/[lang]/fusion/components/LotterySections/LotterySections.tsx:88
 msgid "Play"
-msgstr ""
+msgstr "開始遊戲"
 
 #: src/app/[lang]/(bridge)/components/TransactionModal/BridgeTransactionModal.tsx:93
 msgid "Please confirm allowance approval for {0} in your wallet"
@@ -2282,7 +2282,7 @@ msgstr ""
 
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:109
 msgid "You're Ready to Play!"
-msgstr ""
+msgstr "你已準備好參與！"
 
 #: src/app/[lang]/fusion/components/LotterySections/LotteryModal/LotteryModal.tsx:139
 #~ msgid "You've used all your envelopes for today, new envelope will be available once the timer resets! Remember to participate in Weekly Fusion Voting to be eligible for daily envelopes."
